--- a/RobotProject/report.html
+++ b/RobotProject/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,301],[[4,5,6,0,[],[1,20,280],[[7,8,9,10,[],[1,22,277],[],[[11,0,1,0,[],[1,226,73],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,10088],[[4,5,6,0,[],[0,23,10064],[[7,8,9,10,[],[0,25,10060],[],[[11,0,1,0,[],[0,241,9843,12],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotProject","*C:\\Users\\DMS\\Documents\\Alfan\\eclipse-workspace\\RobotProject","*.","*Test","*C:\\Users\\DMS\\Documents\\Alfan\\eclipse-workspace\\RobotProject\\test","*test","*TestSuite","*C:\\Users\\DMS\\Documents\\Alfan\\eclipse-workspace\\RobotProject\\test\\TestSuite.robot","*test/TestSuite.robot","*<p>Simple example using SeleniumLibrary.\x3c/p>","*CSVLoopTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotProject","*C:\\Users\\DMS\\git\\RobotFramework-inquiry\\RobotProject","*.","*Test","*C:\\Users\\DMS\\git\\RobotFramework-inquiry\\RobotProject\\test","*test","*TestSuite","*C:\\Users\\DMS\\git\\RobotFramework-inquiry\\RobotProject\\test\\TestSuite.robot","*test/TestSuite.robot","*<p>Simple example using SeleniumLibrary.\x3c/p>","*CSVLoopTest","*WebDriverException: Message: Failed to decode response from marionette\n"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"RobotProject","name":"RobotProject","pass":1},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"RobotProject.Test","name":"Test","pass":1},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1","label":"RobotProject.Test.TestSuite","name":"TestSuite","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:10","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:10","fail":1,"id":"s1","label":"RobotProject","name":"RobotProject","pass":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1","label":"RobotProject.Test","name":"Test","pass":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1-s1","label":"RobotProject.Test.TestSuite","name":"TestSuite","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1562895286576;
+window.output["baseMillis"] = 1562897738931;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 318;
+window.output["generated"] = 10115;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
