--- a/RobotProject/report.html
+++ b/RobotProject/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,10088],[[4,5,6,0,[],[0,23,10064],[[7,8,9,10,[],[0,25,10060],[],[[11,0,1,0,[],[0,241,9843,12],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29874],[[4,5,6,0,[],[1,25,29845],[[7,8,9,10,[],[1,27,29838],[],[[11,0,1,0,[],[1,272,29591],[]]],[],[1,1,1,1]]],[],[],[1,1,1,1]]],[],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotProject","*C:\\Users\\DMS\\git\\RobotFramework-inquiry\\RobotProject","*.","*Test","*C:\\Users\\DMS\\git\\RobotFramework-inquiry\\RobotProject\\test","*test","*TestSuite","*C:\\Users\\DMS\\git\\RobotFramework-inquiry\\RobotProject\\test\\TestSuite.robot","*test/TestSuite.robot","*<p>Simple example using SeleniumLibrary.\x3c/p>","*CSVLoopTest","*WebDriverException: Message: Failed to decode response from marionette\n"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotProject","*C:\\Users\\DMS\\Documents\\Alfan\\eclipse-workspace\\RobotFramework-inquiry\\RobotProject","*.","*Test","*C:\\Users\\DMS\\Documents\\Alfan\\eclipse-workspace\\RobotFramework-inquiry\\RobotProject\\test","*test","*TestSuite","*C:\\Users\\DMS\\Documents\\Alfan\\eclipse-workspace\\RobotFramework-inquiry\\RobotProject\\test\\TestSuite.robot","*test/TestSuite.robot","*<p>Simple example using SeleniumLibrary.\x3c/p>","*NewWindowTesting"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:10","fail":1,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:10","fail":1,"id":"s1","label":"RobotProject","name":"RobotProject","pass":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1","label":"RobotProject.Test","name":"Test","pass":0},{"elapsed":"00:00:10","fail":1,"id":"s1-s1-s1","label":"RobotProject.Test.TestSuite","name":"TestSuite","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"RobotProject","name":"RobotProject","pass":1},{"elapsed":"00:00:30","fail":0,"id":"s1-s1","label":"RobotProject.Test","name":"Test","pass":1},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1","label":"RobotProject.Test.TestSuite","name":"TestSuite","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1562897738931;
+window.output["baseMillis"] = 1563512832714;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10115;
+window.output["generated"] = 29898;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","rpa":false,"title":""};
